--- a/notes.yaml
+++ b/notes.yaml
@@ -412,7 +412,7 @@ elements:
 
         - tag: h3
           content: "8. Taxation"
-        - worksheet: zero
+        - worksheet: corporation-tax
 
         - tag: h3
           content: "9. Intangible fixed assets"
@@ -450,7 +450,7 @@ elements:
 
         - tag: h3
           content: "12. Cash and cash equivalents"
-        - worksheet: zero
+        - worksheet: cash
 
         - tag: h3
           content: "13. Trade and other payables"
@@ -459,10 +459,6 @@ elements:
         - tag: h3
           content: "14. Deferred tax assets and liabilities"
         - worksheet: zero
-
-        - tag: h3
-          content: "15. Share capital"
-        - worksheet: share-capital
 
 - kind: page
   elements:
@@ -484,6 +480,10 @@ elements:
 
       - tag: div
         content:
+
+        - tag: h3
+          content: "15. Share capital"
+        - worksheet: share-capital
 
         - tag: h3
           content: "16. Operating leases and commitments"
